// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/ExtraPanel does not have a YouTube tab if not using YouTube 1`] = `
<section id="extra" data-testid="extra-panel" class="text-secondary showing">
  <div class="tabs">
    <div role="tablist" class="clear"><button aria-selected="true" aria-controls="extraPanelLyrics" id="extraTabLyrics" role="tab">
        Lyrics
      </button> <button aria-controls="extraPanelArtist" id="extraTabArtist" role="tab">
        Artist
      </button> <button aria-controls="extraPanelAlbum" id="extraTabAlbum" role="tab">
        Album
      </button>
      <!---->
    </div>
    <div class="panes">
      <div aria-labelledby="extraTabLyrics" id="extraPanelLyrics" role="tabpanel" tabindex="0">
        <lyricspane-stub></lyricspane-stub>
      </div>
      <div aria-labelledby="extraTabArtist" id="extraPanelArtist" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabYouTube" id="extraPanelYouTube" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`components/layout/ExtraPanel renders properly 1`] = `
<section id="extra" data-testid="extra-panel" class="text-secondary showing">
  <div class="tabs">
    <div role="tablist" class="clear"><button aria-selected="true" aria-controls="extraPanelLyrics" id="extraTabLyrics" role="tab">
        Lyrics
      </button> <button aria-controls="extraPanelArtist" id="extraTabArtist" role="tab">
        Artist
      </button> <button aria-controls="extraPanelAlbum" id="extraTabAlbum" role="tab">
        Album
      </button>
      <!---->
    </div>
    <div class="panes">
      <div aria-labelledby="extraTabLyrics" id="extraPanelLyrics" role="tabpanel" tabindex="0">
        <lyrics-pane-stub></lyrics-pane-stub>
      </div>
      <div aria-labelledby="extraTabArtist" id="extraPanelArtist" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabYouTube" id="extraPanelYouTube" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
</section>
`;
